--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,10 +3,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 body {
   font-family: "Space Grotesk", sans-serif !important;
+  font-weight: bold;
 }
 .bg {
   background: rgb(84, 60, 221);
@@ -37,4 +38,14 @@ body {
   font-weight: bold;
   font-size: 20px;
   text-align: center;
+}
+label {
+  font-family: sans-serif;
+  font-size: 1rem;
+  padding-right: 10px;
+}
+
+select {
+  font-size: 0.9rem;
+  padding: 2px 5px;
 }
